// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link render correctly with no variant 1`] = `
<DocumentFragment>
  .cache-10hrh78 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
}

.cache-10hrh78:hover,
.cache-10hrh78:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
    class="e4bq1r51 cache-10hrh78 e7ah3bn0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with target blank 1`] = `
<DocumentFragment>
  .cache-eeofzd {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #4f0599;
}

.cache-eeofzd:hover,
.cache-eeofzd:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-eeofzd:hover,
.cache-eeofzd:focus {
  color: #4f0599;
}

.cache-1bru70j {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  padding-left: 2px;
  opacity: 0.5;
}

.cache-1bru70j.cache-1bru70j {
  vertical-align: top;
}

<a
    class="e4bq1r51 cache-eeofzd e7ah3bn0"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hello
    <svg
      class="e4bq1r50 etwatq50 cache-1bru70j e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with to props 1`] = `
<DocumentFragment>
  .cache-eeofzd {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #4f0599;
}

.cache-eeofzd:hover,
.cache-eeofzd:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-eeofzd:hover,
.cache-eeofzd:focus {
  color: #4f0599;
}

<a
    class="e4bq1r51 cache-eeofzd e7ah3bn0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render blue 1`] = `
<DocumentFragment>
  .cache-ksiohk {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #3f6ed8;
}

.cache-ksiohk:hover,
.cache-ksiohk:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-ksiohk:hover,
.cache-ksiohk:focus {
  color: #1e4293;
}

<a
    class="e4bq1r51 cache-ksiohk e7ah3bn0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render gray 1`] = `
<DocumentFragment>
  .cache-1cnzxpv {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #b2b6c3;
}

.cache-1cnzxpv:hover,
.cache-1cnzxpv:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-1cnzxpv:hover,
.cache-1cnzxpv:focus {
  color: #798096;
}

<a
    class="e4bq1r51 cache-1cnzxpv e7ah3bn0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render inherit 1`] = `
<DocumentFragment>
  .cache-yzowfb {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: inherit;
}

.cache-yzowfb:hover,
.cache-yzowfb:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-yzowfb:hover,
.cache-yzowfb:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="e4bq1r51 cache-yzowfb e7ah3bn0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render primary 1`] = `
<DocumentFragment>
  .cache-eeofzd {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #4f0599;
}

.cache-eeofzd:hover,
.cache-eeofzd:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-eeofzd:hover,
.cache-eeofzd:focus {
  color: #4f0599;
}

<a
    class="e4bq1r51 cache-eeofzd e7ah3bn0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render white 1`] = `
<DocumentFragment>
  .cache-1sbobhx {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #fff;
}

.cache-1sbobhx:hover,
.cache-1sbobhx:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-1sbobhx:hover,
.cache-1sbobhx:focus {
  color: #ccc;
}

<a
    class="e4bq1r51 cache-1sbobhx e7ah3bn0"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;
